--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html>
   <head>
     <title>Rango</title>
@@ -15,5 +18,8 @@
     <div>
       <a href="/rango/about/">About</a><br />
     </div>
+
+    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+
   </body>
 </html>
