Exercise of serving cat.jpeg from the media dir.

--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -20,7 +20,7 @@
     </div>
 
     <br/>
-    <img src="{% static 'images/cat.jpeg' %}" alt="Picture of a Cat" />
+    <img src="{{ MEDIA_URL }}cat.jpeg" alt="Picture of a Cat" />
 
   </body>
 </html>
