--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -12,7 +12,18 @@
 
     <div>
       hey there partner! <br />
-      <strong> {{ boldmessage }} </strong> <br />
+    </div>
+
+    <div>
+      {% if categories %}
+      <ul>
+        {% for category in categories %}
+          <li>{{ category.name }}</li>
+        {% endfor %}
+      </ul>
+      {% else %}
+        There are no categories present.
+      {% endif %}
     </div>
 
     <div>
