Created add_page form, template, and url to add a page

--- a/tango_with_django_project/templates/rango/show_category.html
+++ b/tango_with_django_project/templates/rango/show_category.html
@@ -21,7 +21,8 @@
         {% endif %}
     </div>
     <div>
-      <a href="/rango/">Index</a><br />
+        <br />
+        <a href="/rango/">Index</a><br /><br />
     </div>
 
 </body>
