--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -41,7 +41,9 @@
     </div>
 
     <div>
+      <br />
       <a href="/rango/about/">About</a><br />
+      <a href="/rango/add_page/">Add a Page</a><br /><br />
     </div>
 
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
