--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -43,7 +43,8 @@
     <div>
       <br />
       <a href="/rango/about/">About</a><br />
-      <a href="/rango/add_page/">Add a Page</a><br /><br />
+      <a href="/rango/add_category/">Add a Category</a><br />
+      <a href="/rango/add_page/">Add a Page</a><br />
     </div>
 
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
