--- a/tango_with_django_project/templates/rango/show_category.html
+++ b/tango_with_django_project/templates/rango/show_category.html
@@ -1,32 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rango</title>
-</head>
-<body>
-    <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
-            {% if pages %}
-                <ul>
-                    {% for page in pages %}
-                        <li><a href="{{ page.url }}">{{ page.title }}</a> </li>
-                    {% endfor %}
-                </ul>
-            {% else %}
-                <strong>No pages currently in category.</strong>
-            {% endif %}
-        {% else %}
-            The category does not exist.
-        {% endif %}
-    </div>
-    <div>
-        <br />
-        <a href="/rango/">Index</a><br /><br />
-        {% if category %}
-            <a href="/rango/add_page/{{ category.slug }}">Add Page</a><br /><br />
-        {% endif %}
-    </div>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-</body>
-</html>
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
+
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+        {% if pages %}
+            <ul>
+                {% for page in pages %}
+                    <li><a href="{{ page.url }}">{{ page.title }}</a> </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>No pages currently in category.</strong>
+        {% endif %}
+        <br />
+        <a href="{% url 'add_page_category' category.slug %}">Add Page</a><br /><br />
+    {% else %}
+        The category does not exist.
+    {% endif %}
+{% endblock %}
+
