--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -20,6 +20,7 @@
         <ul>
           <li><a href="{% url 'add_category' %}">Add a Category</a><br /></li>
           <li><a href="{% url 'add_page' %}">Add a Page</a><br /></li>
+          <li><a href="{% url 'index' %}">Index</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
         </ul>
     </div>
