--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,53 +1,38 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
-  <head>
-    <title>Rango</title>
-  </head>
+{% block title_block %}
+  Index
+{% endblock %}
 
-  <body>
-    <h1>Rango says...</h1>
-
-    <div>
-      hey there partner! <br />
-    </div>
-
-    <div>
-      {% if categories %}
-      <h2>Most Liked Categories</h2>
+{% block body_block %}
+<h1>Rango says...</h1>
+<div>
+  hey there partner! <br />
+</div>
+<div>
+  {% if categories %}
+    <h2>Most Liked Categories</h2>
       <ul>
         {% for category in categories %}
-          <li><a href="/rango/category/{{category.slug}}">{{ category.name }}</a></li>
+          <li><a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
         {% endfor %}
       </ul>
-      {% else %}
-        There are no categories present.
-      {% endif %}
-    </div>
-
-    <div>
-      {% if pages_list %}
-      <h2>Most Viewed Pages</h2>
+  {% else %}
+    There are no categories present.
+  {% endif %}
+</div>
+<div>
+  {% if pages_list %}
+    <h2>Most Viewed Pages</h2>
       <ul>
         {% for page in pages_list %}
           <li><a href="{{page.url}}">{{ page.title }}</a></li>
         {% endfor %}
       </ul>
-      {% else %}
-        There are no pages present.
-      {% endif %}
-    </div>
-
-    <div>
-      <br />
-      <a href="/rango/about/">About</a><br />
-      <a href="/rango/add_category/">Add a Category</a><br />
-      <a href="/rango/add_page/">Add a Page</a><br />
-    </div>
-
-    <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-
-  </body>
-</html>
+  {% else %}
+    There are no pages present.
+  {% endif %}
+</div>
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" height="150" width="150" />
+{% endblock %}
