--- a/tango_with_django_project/templates/rango/cats.html
+++ b/tango_with_django_project/templates/rango/cats.html
@@ -1,7 +1,13 @@
 <ul>
     {% if cats %}
         {% for c in cats %}
-            <li><a href="{% url 'show_category' c.slug %}">{{ c.name }}</a> </li>
+            {% if c == active_cat %}
+                <strong>
+                <li><a href="{% url 'show_category' c.slug %}">{{ c.name }}</a> </li>
+                </strong>
+            {% else %}
+                <li><a href="{% url 'show_category' c.slug %}">{{ c.name }}</a> </li>
+            {% endif %}
         {% endfor %}
     {% else %}
         <li><strong>Thre are no categories present.</strong></li>
