Included flash messages display on base.html and messages of error/sucess in add_page

--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -12,6 +12,15 @@
   </head>
   <body>
     <div>
+        {% if messages %}
+            <ul class="messages">
+            {% for message in messages %}
+                <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    </div>
+    <div>
         {% block body_block %}
         {% endblock %}
     </div>
