Set coockies to show the number of visits of a client

--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -9,6 +9,9 @@
 <h1>Rango says...</h1>
 <div>
   hey there partner! <br />
+  {% if visits %}
+  <p>Number of visits: {{ visits }}</p>
+  {% endif %}
 </div>
 <div>
   {% if categories %}
