--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -27,10 +27,16 @@
     <hr />
     <div>
         <ul>
-          <li><a href="{% url 'add_category' %}">Add a Category</a><br /></li>
-          <li><a href="{% url 'add_page' %}">Add a Page</a><br /></li>
-          <li><a href="{% url 'index' %}">Index</a></li>
-          <li><a href="{% url 'about' %}">About</a></li>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'add_category' %}">Add a Category</a><br /></li>
+                <li><a href="{% url 'add_page' %}">Add a Page</a><br /></li>
+                <li><a href="{% url 'user_logout' %}">Log Out</a><br /></li>
+            {% else %}
+                <li><a href="{% url 'user_login' %}">Log In</a><br /></li>
+                <li><a href="{% url 'register' %}">Register</a><br /></li>
+            {% endif %}
+            <li><a href="{% url 'index' %}">Index</a></li>
+            <li><a href="{% url 'about' %}">About</a></li>
         </ul>
     </div>
   </body>
