--- a/tango_with_django_project/templates/rango/cats.html
+++ b/tango_with_django_project/templates/rango/cats.html
@@ -1,16 +1,17 @@
+{% if cats %}
+<h2> All categories </h2>
 <ul>
-    {% if cats %}
-        {% for c in cats %}
-            {% if c == active_cat %}
-                <strong>
-                <li><a href="{% url 'show_category' c.slug %}">{{ c.name }}</a> </li>
-                </strong>
-            {% else %}
-                <li><a href="{% url 'show_category' c.slug %}">{{ c.name }}</a> </li>
-            {% endif %}
-        {% endfor %}
-    {% else %}
-        <li><strong>Thre are no categories present.</strong></li>
-    {% endif %}
+    {% for c in cats %}
+        {% if c == active_cat %}
+        <strong>
+            <li><a href="{% url 'show_category' c.slug %}">{{ c.name }}</a> </li>
+        </strong>
+        {% else %}
+            <li><a href="{% url 'show_category' c.slug %}">{{ c.name }}</a> </li>
+        {% endif %}
+    {% endfor %}
 </ul>
+{% else %}
+<li><strong>There are no categories present.</strong></li>
+{% endif %}
 
