Changed base.html to use dashboard model of bootstrap. Changed user_profile.html to use new type of list to show up in navbar. Created bootstrap folder inside static folder to store bootstrap css and js files.

--- a/tango_with_django_project/templates/rango/user_profile.html
+++ b/tango_with_django_project/templates/rango/user_profile.html
@@ -1,6 +1,8 @@
 {% if user_profile %}
     {% if not user_profile.confirmed  %}
-    <li><strong>You have to confirm your email <a href="{% url 'confirm_user_email' %}">here</a> </strong></li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'confirm_user_email' %}">Confirm your email</a>
+    </li>
     {% endif %}
 {% endif %}
 
