--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -32,6 +32,7 @@
                 <li><a href="{% url 'add_category' %}">Add a Category</a><br /></li>
                 <li><a href="{% url 'add_page' %}">Add a Page</a><br /></li>
                 <li><a href="{% url 'user_logout' %}">Log Out</a><br /></li>
+                <li><a href="{% url 'update_user_profile' %}">Change Your Profile</a><br /></li>
             {% else %}
                 <li><a href="{% url 'user_login' %}">Log In</a><br /></li>
                 <li><a href="{% url 'register' %}">Register</a><br /></li>
