--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -76,12 +76,14 @@
         <div class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
           <div>
             {% if messages %}
-              <h2>Messages</h2>
-              <ul class="messages">
               {% for message in messages %}
-                  <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+                {{ message }}
+                </div>
               {% endfor %}
-              </ul>
             {% endif %}
           </div>
           <div>
