--- a/tango_with_django_project/templates/auth/register.html
+++ b/tango_with_django_project/templates/auth/register.html
@@ -1,5 +1,6 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
+{% load bootstrap3 %}
 
 {% block title_block %}
   Register
@@ -9,8 +10,12 @@
     <h1>Register Here</h1><br />
     <form id="user_form" action="{% url 'register' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ user_form.as_p }}
-    <input type="submit" name="submit" value="Submit" />
+    {% bootstrap_form user_form %}
+    {% buttons %}
+        <button type="submit" class="btn btn-primary">
+            {% bootstrap_icon "star" %} Submit
+        </button>
+    {% endbuttons %}
     </form>
 {% endblock %}
 
