--- a/tango_with_django_project/templates/auth/user_login.html
+++ b/tango_with_django_project/templates/auth/user_login.html
@@ -1,6 +1,6 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
-
+{% load bootstrap3 %}
 {% block title_block %}
   Log In
 {% endblock %}
@@ -12,8 +12,12 @@
         <h1>Log In</h1><br />
         <form id="login_form" action="{% url 'user_login' %}" method="post">
         {% csrf_token %}
-        {{ login_form.as_p }}
-        <input type="submit" name="submit" value="Submit" />
+        {% bootstrap_form login_form %}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">
+            {% bootstrap_icon "star" %} Submit
+            </button>
+        {% endbuttons %}
         </form>
     {% endif %}
 {% endblock %}
