--- a/tango_with_django_project/templates/rango/add_category.html
+++ b/tango_with_django_project/templates/rango/add_category.html
@@ -1,5 +1,6 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
+{% load bootstrap3 %}
 
 {% block title_block %}
     Add Category
@@ -9,8 +10,12 @@
 <div>
     <form action="{% url 'add_category' %}" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit" />
+        {% bootstrap_form form %}
+        {% buttons %}
+        <button type="submit" class="btn btn-primary">
+            {% bootstrap_icon "star" %} Submit
+        </button>
+        {% endbuttons %}
     </form>
 </div>
 {% endblock %}
