--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">All Categories</a>
+                <a class="nav-link" href="{% url 'show_all_categories' %}">All Categories</a>
             </li>
             {% if user.is_authenticated %}
             {% get_user_profile user %}
