--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -12,7 +12,12 @@
   {% if visits %}
   <p>Number of visits: {{ visits }}</p>
   {% endif %}
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" height="150" width="150" />
+
 </div>
+{% endblock %}
+
+{% block bottom1 %}
 <div>
   {% if categories %}
     <h2>Most Liked Categories</h2>
@@ -25,6 +30,9 @@
     There are no categories present.
   {% endif %}
 </div>
+{% endblock %}
+
+{% block bottom2 %}
 <div>
   {% if pages_list %}
     <h2>Most Viewed Pages</h2>
@@ -37,5 +45,4 @@
     There are no pages present.
   {% endif %}
 </div>
-<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" height="150" width="150" />
 {% endblock %}
