--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -52,6 +52,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'add_page' %}">Add a Page</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'show_all_users' %}">Show Users</a>
+            </li>
             {% else %}
             <li class="nav-item">
               <a  class="nav-link" href="{% url 'register' %}">Register</a><br />
